# project-bcif

./: Dockerfile  README.md  docker-compose.yaml  requirements.txt
dags/: pyproject.toml  requirements.txt  setup.py
dags/bcif/: dag.py  instructions  nodag.py  task_functions.py  tasks.py
dags/bcif/config/: bcifConfig.yml  config.yaml
