[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bcif"
version = "1.0"
dependencies = [
    "requests >= 2.32.2",
    "authlib",
    "rcsb.utils.io >= 1.48",
    "rcsb.db >= 1.801",
    "rcsb.workflow >= 0.53",
    "mmcif >= 0.91.0",
    "hydra-core >= 1.3.2"
]
requires-python = ">= 3.8"
authors = [
    {name = "James Smith", email = "james.smith@rcsb.org"},
]
description = "cif to binary cif converter"
classifiers = [
    "Programming Language :: Python"
]

[project.optional-dependencies]

